atualizada documentação da api pelo Swagger
