# functions/src/controllers/categories.controller.ts
@@ -5,21 +5,29 @@ import { CategoriesService } from "../services/categories.service.js";
 
 export class CategoriesController {
     static async getAll(req: Request, res: Response) {
+        // #swagger.tags = ['Categories']
+
         res.json(await new CategoriesService().getAll());
     }
 
     static async getById(req: Request, res: Response) {
+        // #swagger.tags = ['Categories']
+
         const categoryId = req.params.id;
         res.json(await new CategoriesService().getById(categoryId));
     }
 
     static async save(req: Request, res: Response) {
+        // #swagger.tags = ['Categories']
+
         const category = req.body;
         await new CategoriesService().save(category);
         res.status(201).json({ message: "Categoria criada com sucesso!" });
     }
 
     static async update(req: Request, res: Response) {
+        // #swagger.tags = ['Categories']
+
         const categoryId = req.params.id;
         const category = req.body;
         await new CategoriesService().update(categoryId, category);
@@ -29,6 +37,8 @@ export class CategoriesController {
     }
 
     static async delete(req: Request, res: Response) {
+        // #swagger.tags = ['Categories']
+
         const categoryId = req.params.id;
         await new CategoriesService().delete(categoryId);
         res.status(204).end();
